# gh-glance

./: .cursorrules  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  git.rs  github.rs  main.rs  task.rs
