[package]
name = "gh-glance"
version = "0.1.0"
edition = "2021"
authors = ["Minoru Takeuchi"]
description = "A GitHub CLI extension for managing PR worktrees"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
